# chatbot_RH

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: RH_infos.csv
data/vectorstore/: index.faiss  index.pkl
src/agents/: prompts.py  rh_agent.py  tools.py
src/api/: main.py  routes.py
src/config/: settings.py
src/core/: exceptions.py  models.py
src/data/: loader.py  vectorstore.py
src/ui/: streamlit_app.py
