[project]
name = "chatbot-rh"
version = "0.1.0"
description = "assistant RH"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<0.116",
    # LangChain core
    "langchain>=1.1.3",
    "langchain-core>=1.2.0",
    # LangGraph for memory/persistence
    "langgraph>=0.4.0",
    "langgraph-checkpoint>=2.0.0",
    # Providers
    "langchain-google-genai>=4.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community",
    # Vector Stores & Embeddings
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.22",
    # FastAPI & Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.30.0",
    # Data Processing
    "pandas>=2.0.0",
    "pypdf>=4.0.0",
    # Config & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.9,<0.15",
]
